--- a/index.html
+++ b/index.html
@@ -1670,3 +1670,4 @@ document.addEventListener('alpine:init', () => {
 </script>
 </body>
 </html>
+<!-- ✅ Updated with full owner/property management, search, filters, status breakdown, Supabase integration --> breakdown, Supabase integration -->
